clusters/vollminlab-cluster/mediastack/sabnzbd/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: mediastack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    shlink.vollminlab.com/slug: sabnzbd
  labels:
    app: sabnzbd
    env: production
    category: media
spec:
  ingressClassName: nginx
  rules:
    - host: sabnzbd.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 10097
  tls:
    - hosts:
        - sabnzbd.vollminlab.com
      secretName: wildcard-tls
